fix bug on safari

--- a/src/app/pages/mobile/mobile.component.scss
+++ b/src/app/pages/mobile/mobile.component.scss
@@ -3,6 +3,7 @@ img {
   top: 100px; 
 }
 .wrapper {
+  position: relative;
   height: 100vh;
   width: 100vw;
   background: #000;
@@ -11,6 +12,7 @@ img {
   justify-content: center;
   align-items: center;
   font-family: NEON, -apple-system, Roboto, 'Open Sans', sans-serif;
+  z-index: 2;
 }
 
 .txt {
@@ -41,10 +43,9 @@ img {
   width: 100%;
   height: 100%;
   mix-blend-mode: multiply;
-  z-index: 1;
 }
 .dodge {
-  background: radial-gradient(circle, #fff, #000 55%) center / 25% 25%;
+  background: radial-gradient(circle, #fff, #000 65%) center / 25% 25%;
   position: absolute;
   top: -100%;
   left: -100%;
@@ -52,6 +53,7 @@ img {
   bottom: 0;
   mix-blend-mode: color-dodge;
   animation: dodge-area 8s linear infinite;
+  -webkit-animation: dodge-area 12s linear infinite;
 }
 
 .welcome-notes {
@@ -75,8 +77,19 @@ img {
   right: 5px;
   font-size: 10px;
 }
+
 @keyframes dodge-area {
   to {
     transform: translate(50%, 50%);
+    -webkit-backdrop-filter: brightness(60%);
+  }
+}
+
+@-webkit-keyframes dodge-area {
+  0% {
+    background-position: 0% 0%;
+  }
+  100% {
+    background-position: 100% 100%;
   }
 }
